# ai_annotation_platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Chốt Scope & Phân Công — VSF AI Annotation Platform MVP.md  Makefile  README.md  UI Testability — URL & Element Map (MVP).md  docker-compose.yml  render.yaml
docs/: README.md  (+1 more)
src/backend/: .env.example  README.md  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: a1b2c3d4e5f6_constraints_and_immutability.py  a7b8c9d0e1f2_audit_log_fields.py  b2c3d4e5f6a7_user_last_login_at.py  b8c9d0e1f2a3_user_default_role.py  c3d4e5f6a7b8_project_llm_config.py  c9d0e1f2a3b4_project_start_date.py  cbf57c0cefd7_initial_schema.py  d4e5f6a7b8c9_pdf_file_bundle_id_nullable.py  e5f6a7b8c9d0_annotation_justifications_json.py  f6a7b8c9d0e1_llm_pre_score_raw_response_reference.py
src/backend/app/: constants.py  main.py
src/backend/app/api/v1/: health.py  router.py
src/backend/app/core/: config.py  crypto.py  exceptions.py  logging.py  middleware.py  pagination.py  permissions.py  request_meta.py  security.py
src/backend/app/db/: base.py  session.py
src/backend/app/jobs/: settings.py  worker.py
src/backend/app/models/: __init__.py  annotation_submission.py  audit_log.py  batch.py  bundle.py  claim_source_map.py  claim_task.py  llm_pre_score.py  parent_task.py  parse_result.py  pdf_file.py  project.py  qa_review.py  rubric_version.py  source_reference.py  user.py  user_project_role.py
src/backend/app/schemas/: common.py
src/backend/modules/source_shark/: ContentRelevanceFilter.py
src/backend/scripts/: seed_admin.py
src/backend/tests/: conftest.py
src/backend/tests/fixtures/: pipeline.py  users.py
src/backend/tests/integration/: conftest.py  test_admin_stats.py  test_audit_log.py  test_auth.py  test_auth_real.py  test_error_handler.py  test_file_serving.py  test_import_pipeline.py  test_pipeline_e2e.py  test_project_claims.py  test_rbac.py  test_security.py  test_users_create.py
src/backend/tests/unit/: test_config_guard.py  test_json_extract.py  test_openrouter_provider.py  test_pdf_parser_domain.py  test_projects_schema.py  test_prompt_registry.py  test_scoring.py  test_sq_engine.py  test_storage_key.py
(+301 files in other folders)
