[project]
name = "vsf-annotation-backend"
version = "0.1.0"
description = "VSF AI Annotation Platform — backend API + worker (MVP scaffold)"
requires-python = ">=3.12"
dependencies = [
    # --- Web framework ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",      # upload PDF (multipart form)
    # --- Config / validation ---
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    # --- Database ---
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",                 # async driver (app runtime)
    "psycopg[binary]>=3.2",          # sync driver (Alembic)
    "alembic>=1.14",
    # --- Worker / queue ---
    "arq>=0.26",
    # --- Auth / security ---
    "bcrypt>=4.1",                   # hash password (dùng trực tiếp, không qua passlib)
    "pyjwt>=2.10",                   # JWT
    "cryptography>=44.0",            # Fernet — encrypt LLM API key at-rest (BR-1.2)
    # --- Storage (S3 / MinIO) ---
    "aioboto3>=13.2",
    # --- PDF parsing (dùng ở bước sau, để sẵn) ---
    # "pdfplumber>=0.11",            # TODO(import_bundle): bật khi làm parser
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",                   # async test client
    "ruff>=0.8",                     # lint + format
    "aiosqlite>=0.20",               # DB in-memory cho unit test nhanh
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # B008: FastAPI dùng Depends()/Query() làm default argument — pattern chuẩn, không phải bug.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# F821: relationship dùng forward-ref string ("UserAccount") — hợp lệ trong SQLAlchemy,
# ruff không resolve được type trong Mapped[...]. Tắt cho models.
"app/models/*.py" = ["F821"]
# UP046: Generic[T] vẫn cần cho Pydantic v2 generic model (type-param syntax chưa hợp).
"app/schemas/common.py" = ["UP046", "UP047"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
